--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-node_modules/
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+# Useful .gitignore templates: https://github.com/github/gitignore
+
+# -----------------------------------------------------------------
+# # .gitignore
+# # Bare Minimum Git
+# # http://ironco.de/bare-minimum-git/
+# # ver 20181206
+# #
+# # To ignore uncommitted changes in a file that is already tracked,
+# # use `git update-index --assume-unchanged`.
+# #
+# # To stop tracking a file that is currently tracked,
+# # use `git rm --cached`
+# #
+# # -----------------------------------------------------------------
+# ignore all files starting with or ~
+~*
+
+# Expo Default ignore stuff:
 .expo/
 dist/
 npm-debug.*
@@ -10,5 +30,62 @@ npm-debug.*
 *.orig.*
 web-build/
 
-# macOS
-.DS_Store
+# ignore node/grunt dependency directories
+node_modules/
+
+# Ignore build directories
+/build
+/vendor
+/bower_components
+/_site
+
+# ignore OS generated files
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# ignore Editor files
+*.sublime-project
+*.sublime-workspace
+*.komodoproject
+.vscode/
+www/styles/index.html
+
+# ignore log files and databases
+*.log
+*.sql
+*.sqlite
+logs.txt
+
+# ignore compiled files
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# ignore packaged files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# ignore private/secret files
+*.der
+*.key
+*.pem
+*.env
+
+# -------------------------
+# BEGIN Whitelisted Files
+# -------------------------
+
+# track these files, if they exist
+!.gitignore
+!.editorconfig
+!.phpcs.xml.dist
