--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Desmond",
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   }
